--- a/pentaho-exec/docker-compose.yml
+++ b/pentaho-exec/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  pdi-exec:
+  pdi-jobs:
     build:
       context: .
       dockerfile: Dockerfile
@@ -13,3 +13,11 @@ services:
     # kitchen en entrypoint, affiche version et sort
     entrypoint: ["/opt/pdi/kitchen.sh"]
     command: ["-version"]
+    # montage volume pour jobs Pentaho
+    volumes:
+      - pentaho_jobs:/jobs:ro
+
+# volume externe défini en top-level
+volumes:
+  pentaho_jobs:
+    external: true
